--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   "keywords": [
     "muchilyeon"
   ],
-  "author": "jhaemin",
   "license": "MIT",
   "files": [
     "build/index.js"
   ],
   "devDependencies": {
+    "@types/html-webpack-plugin": "^3.2.6",
     "file-loader": "^6.2.0",
     "parcel-bundler": "^1.12.5",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^5.5.0"
   }
 }
